Bug 1528850 - ws-over-h2 receive seems unreliable, r=dragana

The patch changes InputStreamShim::AsyncWait() so it checks the buffer state and if there is some data available the callback is immediately notified. Without this check the callback would be notified only when new data is delivered from the network.

Differential Revision: https://phabricator.services.mozilla.com/D53972

--HG--
extra : moz-landing-system : lando